2004-08-09 Scott Dattalo <scott@dattalo.com>
	* src/14bit-registers.cc, src/14bit-registers.h, src/14bit-tmrs.cc,
	src/16bit-registers.cc, src/attribute.cc, src/eeprom.cc, src/intcon.cc
	src/ioports.cc, src/modules.cc, src/p16x7x.cc, src/pie.cc, src/pir.cc
	src/registers.cc, src/ssp.cc, src/tmr0.cc, src/trace.cc, src/trace.h
	src/uart.cc, gui/gui_breadboard.cc, modules/led.cc, modules/paraface.cc
	modules/resistor.cc,modules/usart.cc:
	 Continuing this ongoing trace experiment.

2004-08-09 Scott Dattalo <scott@dattalo.com>
	* src/trace.cc, gpsim/main.cc: more experimental code
	* src/attribute.cc, src/attribute.h, gui/gui_breadboard.cc: Some annoying
	bug with attributes that I can't figure out. Problem appears when shared
	libraries are disabled.
	
2004-08-06 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/processor.h, src/registers.h, src/trace.cc:
	Partial implementation of trace reconstruction.

2004-08-04 Scott Dattalo <scott@dattalo.com>
	* src/14bit-registers.cc, src/16bit-processors.cc, src/16bit-registers.cc
	  src/p12x.cc, src/p16f62x.cc, src/p16f87x.cc, src/p16x5x.cc, src/p16x6x.cc
	  src/p16x7x.cc, src/p16x8x.cc, src/p18x.cc, src/pic-processor.cc, 
	  src/pic-processor.h, src/processor.cc, src/processor.h, src/registers.cc
	  src/registers.h, src/tmr0.cc, src/trace.cc, src/trace.h, gui/gui_regwin.cc
	  cli/cmd_trace.cc:
	Two categories of changes have been made: First, the unitialized register
	concept has been propogated to all of the register constructions. Second,
	tracing has been improved yet again.


2004-08-04 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: packaging of MinGW executables
	* gpsim/gpsim.vcproj: cleanup
	* plat/win32/make.mingw, cli/makefile.mingw, gpsim/makefile.mingw,
	  gui/makefile.mingw, modules/makefile.mingw, src/makefile.mingw:
	  do not define NDEBUG to enable assertions in release version

2004-08-02 Borut Razem <borut.razem@siol.net>
	* gui/gui_breadboard.cc, gui/gui_menu.cc, src/hexutils.cc,