@@ -17,6 +17,9 @@ the Free Software Foundation, 59 Temple Place - Suite 330,
 Boston, MA 02111-1307, USA.  */
 
 
+/* IN_MODULE should be defined for modules */
+#define IN_MODULE
+
 #include <gtk/gtk.h>
 
 #include "lcd.h"
