@@ -34,6 +34,8 @@
 !define PRODUCT_UNINST_KEY "Software\Microsoft\Windows\CurrentVersion\Uninstall\${PRODUCT_NAME}"
 !define PRODUCT_UNINST_ROOT_KEY "HKLM"
 
+!define GPSIM_ROOT "..\..\gpsim\gpsim"
+
 SetCompressor lzma
 
 ; MUI 1.67 compatible ------
@@ -47,7 +49,7 @@ SetCompressor lzma
 ; Welcome page
 !insertmacro MUI_PAGE_WELCOME
 ; License page
-!insertmacro MUI_PAGE_LICENSE "gpsim\COPYING.TXT"
+!insertmacro MUI_PAGE_LICENSE "${GPSIM_ROOT}\COPYING"
 ; Directory page
 !insertmacro MUI_PAGE_DIRECTORY
 ; Instfiles page
@@ -69,7 +71,7 @@ SetCompressor lzma
 ; MUI end ------
 
 Name "${PRODUCT_NAME} ${PRODUCT_VERSION}"
-OutFile "Setup.exe"
+OutFile "gpsim-${PRODUCT_VERSION}-YYYYMMDD-setup.exe"
 InstallDir "$PROGRAMFILES\gpsim"
 InstallDirRegKey HKLM "${PRODUCT_DIR_REGKEY}" ""
 ShowInstDetails show
@@ -112,9 +114,9 @@ Section "MainSection" SEC01
 
   SetOutPath "$INSTDIR\bin"
   SetOverwrite ifnewer
+  File "${GPSIM_ROOT}\gpsim\gpsim.exe"
   File "gpsim\bin\asprintf.dll"
   File "gpsim\bin\charset.dll"
-  File "gpsim\bin\gpsim.exe"
   File "gpsim\bin\iconv.dll"
   File "gpsim\bin\intl.dll"
   File "gpsim\bin\libatk-1.0-0.dll"
@@ -131,11 +133,11 @@ Section "MainSection" SEC01
   File "gpsim\bin\libpangoft2-1.0-0.dll"
   File "gpsim\bin\libpangowin32-1.0-0.dll"
   File "gpsim\bin\popt1.dll"
-  File "gpsim\bin\readline.dll "
+  File "gpsim\bin\readline.dll"
 
   SetOutPath "$INSTDIR\doc"
-  File "gpsim\doc\gpsim_cvs.html"
-  File "gpsim\doc\gpsimWin32.html"
+  File "${GPSIM_ROOT}\doc\gpsim_cvs.html"
+  File "${GPSIM_ROOT}\doc\gpsimWin32.html"
 
   SetOutPath "$INSTDIR\etc\gtk-2.0"
   File "gpsim\etc\gtk-2.0\gdk-pixbuf.loaders"
@@ -171,20 +173,6 @@ Section "MainSection" SEC01
   File "gpsim\lib\gtk-2.0\2.4.0\loaders\libpixbufloader-gif.dll"
   File "gpsim\lib\gtk-2.0\2.4.0\loaders\libpixbufloader-bmp.dll"
   File "gpsim\lib\gtk-2.0\2.4.0\loaders\libpixbufloader-ani.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-xpm.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-xbm.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-wbmp.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-tiff.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-tga.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-ras.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-pnm.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-png.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-pcx.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-jpeg.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-ico.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-gif.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-bmp.dll"
-  File "gpsim\lib\gtk-2.0\2.4.0\loaders\cygpixbufloader-ani.dll"
 
   SetOutPath "$INSTDIR\lib\pango\1.4.0\modules"
   File "gpsim\lib\pango\1.4.0\modules\pango-thai-fc.dll"
@@ -196,13 +184,256 @@ Section "MainSection" SEC01
   File "gpsim\lib\pango\1.4.0\modules\pango-arabic-fc.dll"
 
   SetOutPath "$INSTDIR\modules"
-  File "gpsim\modules\modules.dll"
+  File "${GPSIM_ROOT}\modules\modules.dll"
+  File "${GPSIM_ROOT}\plat\win32\modules.def"
+
 
   SetOutPath "$INSTDIR\"
-  File "gpsim\ChangeLog.txt"
-  File "gpsim\gpsim.ico"
-  File "gpsim\COPYING.TXT"
-  File "gpsim\README.TXT"
+  File /oname="ChangeLog.txt" "${GPSIM_ROOT}\ChangeLog"
+  File "${GPSIM_ROOT}\plat\win32\gpsim.ico"
+  File /oname="COPYING.TXT" "${GPSIM_ROOT}\COPYING"
+  File /oname="README.TXT" "${GPSIM_ROOT}\README"
+
+  SetOutPath "$INSTDIR\include\gpsim"
+  File "${GPSIM_ROOT}\src\12bit-instructions.h"
+  File "${GPSIM_ROOT}\src\12bit-processors.h"
+  File "${GPSIM_ROOT}\src\14bit-instructions.h"
+  File "${GPSIM_ROOT}\src\14bit-processors.h"
+  File "${GPSIM_ROOT}\src\14bit-registers.h"
+  File "${GPSIM_ROOT}\src\14bit-tmrs.h"
+  File "${GPSIM_ROOT}\src\16bit-instructions.h"
+  File "${GPSIM_ROOT}\src\16bit-processors.h"
+  File "${GPSIM_ROOT}\src\16bit-registers.h"
+  File "${GPSIM_ROOT}\src\16bit-tmrs.h"
+  File "${GPSIM_ROOT}\src\attribute.h"
+  File "${GPSIM_ROOT}\src\breakpoints.h"
+  File "${GPSIM_ROOT}\src\cod.h"
+  File "${GPSIM_ROOT}\src\eeprom.h"
+  File "${GPSIM_ROOT}\src\fopen-path.h"
+  File "${GPSIM_ROOT}\src\gpsim_classes.h"
+  File "${GPSIM_ROOT}\src\gpsim_def.h"
+  File "${GPSIM_ROOT}\src\gpsim_interface.h"
+  File "${GPSIM_ROOT}\src\gpsim_time.h"
+  File "${GPSIM_ROOT}\src\i2c-ee.h"
+  File "${GPSIM_ROOT}\src\icd.h"
+  File "${GPSIM_ROOT}\src\intcon.h"
+  File "${GPSIM_ROOT}\src\interface.h"
+  File "${GPSIM_ROOT}\src\ioports.h"
+  File "${GPSIM_ROOT}\src\lxt_write.h"
+  File "${GPSIM_ROOT}\src\modules.h"
+  File "${GPSIM_ROOT}\src\p12x.h"
+  File "${GPSIM_ROOT}\src\p16f62x.h"
+  File "${GPSIM_ROOT}\src\p16f87x.h"
+  File "${GPSIM_ROOT}\src\p16x5x.h"
+  File "${GPSIM_ROOT}\src\p16x6x.h"
+  File "${GPSIM_ROOT}\src\p16x7x.h"
+  File "${GPSIM_ROOT}\src\p16x8x.h"
+  File "${GPSIM_ROOT}\src\p17c75x.h"
+  File "${GPSIM_ROOT}\src\p18x.h"
+  File "${GPSIM_ROOT}\src\packages.h"
+  File "${GPSIM_ROOT}\src\picdis.h"
+  File "${GPSIM_ROOT}\src\pic-instructions.h"
+  File "${GPSIM_ROOT}\src\pic-packages.h"
+  File "${GPSIM_ROOT}\src\pic-processor.h"
+  File "${GPSIM_ROOT}\src\pic-registers.h"
+  File "${GPSIM_ROOT}\src\pie.h"
+  File "${GPSIM_ROOT}\src\pir.h"
+  File "${GPSIM_ROOT}\src\processor.h"
+  File "${GPSIM_ROOT}\src\registers.h"
+  File "${GPSIM_ROOT}\src\ssp.h"
+  File "${GPSIM_ROOT}\src\stimuli.h"
+  File "${GPSIM_ROOT}\src\stimulus_orb.h"
+  File "${GPSIM_ROOT}\src\symbol.h"
+  File "${GPSIM_ROOT}\src\symbol_orb.h"
+  File "${GPSIM_ROOT}\src\tmr0.h"
+  File "${GPSIM_ROOT}\src\trace.h"
+  File "${GPSIM_ROOT}\src\trace_orb.h"
+  File "${GPSIM_ROOT}\src\uart.h"
+  File "${GPSIM_ROOT}\src\value.h"
+  File "${GPSIM_ROOT}\src\xref.h"
+
+  SetOutPath "$INSTDIR\examples\12bit"
+  File "${GPSIM_ROOT}\examples\12bit\Makefile.am"
+  File "${GPSIM_ROOT}\examples\12bit\gpio_stim.stc"
+  File "${GPSIM_ROOT}\examples\12bit\p12_it.asm"
+  File "${GPSIM_ROOT}\examples\12bit\p12c508_test.asm"
+  File "${GPSIM_ROOT}\examples\12bit\p12c508_test.stc"
+  File "${GPSIM_ROOT}\examples\12bit\p12c509_test.asm"
+  File "${GPSIM_ROOT}\examples\12bit\p12x.inc"
+  File "${GPSIM_ROOT}\examples\12bit\pcl_test_12bit.asm"
+
+  SetOutPath "$INSTDIR\examples\14bit"
+  File "${GPSIM_ROOT}\examples\14bit\analog_stim.stc"
+  File "${GPSIM_ROOT}\examples\14bit\analog_stim2.stc"
+  File "${GPSIM_ROOT}\examples\14bit\ap.stc"
+  File "${GPSIM_ROOT}\examples\14bit\async_pulse.stc"
+  File "${GPSIM_ROOT}\examples\14bit\async_stim.stc"
+  File "${GPSIM_ROOT}\examples\14bit\async_stim2.stc"
+  File "${GPSIM_ROOT}\examples\14bit\bcd.asm"
+  File "${GPSIM_ROOT}\examples\14bit\dtmf.stc"
+  File "${GPSIM_ROOT}\examples\14bit\eetest.asm"
+  File "${GPSIM_ROOT}\examples\14bit\interrupt_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\interrupt_test.stc"
+  File "${GPSIM_ROOT}\examples\14bit\iopin_stim.asm"
+  File "${GPSIM_ROOT}\examples\14bit\iopin_stim.stc"
+  File "${GPSIM_ROOT}\examples\14bit\ioport_stim.stc"
+  File "${GPSIM_ROOT}\examples\14bit\it.asm"
+  File "${GPSIM_ROOT}\examples\14bit\loop_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\mod_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\module_test.stc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c64.inc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c64_ccp.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16c64_ccp.stc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c64_pwm.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16c64_pwm.stc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c64_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16c64_test.stc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c64_tmr1.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16c65.inc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c65_pwm.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16c65_pwm.stc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c71.inc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c71_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16c74.inc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c74_pwm.stc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c74_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16c74_test.stc"
+  File "${GPSIM_ROOT}\examples\14bit\p16c84.inc"
+  File "${GPSIM_ROOT}\examples\14bit\p16f877.inc"
+  File "${GPSIM_ROOT}\examples\14bit\p16f877_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16f877_test2.asm"
+  File "${GPSIM_ROOT}\examples\14bit\p16f877_test2.stc"
+  File "${GPSIM_ROOT}\examples\14bit\pcl_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\portc_stim.stc"
+  File "${GPSIM_ROOT}\examples\14bit\pulse_measure.asm"
+  File "${GPSIM_ROOT}\examples\14bit\sine.asm"
+  File "${GPSIM_ROOT}\examples\14bit\stim_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\sync_stim.stc"
+  File "${GPSIM_ROOT}\examples\14bit\t.stc"
+  File "${GPSIM_ROOT}\examples\14bit\time_test.stc"
+  File "${GPSIM_ROOT}\examples\14bit\twist.asm"
+  File "${GPSIM_ROOT}\examples\14bit\usart.stc"
+  File "${GPSIM_ROOT}\examples\14bit\usart_14.asm"
+  File "${GPSIM_ROOT}\examples\14bit\vertical_adder.asm"
+  File "${GPSIM_ROOT}\examples\14bit\wdt_test.asm"
+
+  SetOutPath "$INSTDIR\examples\16bit"
+  File "${GPSIM_ROOT}\examples\16bit\bt18.asm"
+  File "${GPSIM_ROOT}\examples\16bit\calltest18.asm"
+  File "${GPSIM_ROOT}\examples\16bit\indtest18.asm"
+  File "${GPSIM_ROOT}\examples\16bit\it18.asm"
+  File "${GPSIM_ROOT}\examples\16bit\mul.asm"
+  File "${GPSIM_ROOT}\examples\16bit\p18.asm"
+  File "${GPSIM_ROOT}\examples\16bit\p18c242.inc"
+  File "${GPSIM_ROOT}\examples\16bit\p18c242_test.asm"
+  File "${GPSIM_ROOT}\examples\16bit\sine18.asm"
+  File "${GPSIM_ROOT}\examples\16bit\tbl.asm"
+  File "${GPSIM_ROOT}\examples\16bit\tmr0_18.asm"
+  File "${GPSIM_ROOT}\examples\16bit\usart_18.asm"
+
+  SetOutPath "$INSTDIR\examples\modules\led_test"
+  File "${GPSIM_ROOT}\examples\modules\led_test\led_mod.asm"
+  File "${GPSIM_ROOT}\examples\modules\led_test\led_mod.stc"
+
+  SetOutPath "$INSTDIR\examples\modules\logic_test"
+  File "${GPSIM_ROOT}\examples\modules\logic_test\Makefile"
+  File "${GPSIM_ROOT}\examples\modules\logic_test\logic_mod.asm"
+  File "${GPSIM_ROOT}\examples\modules\logic_test\logic_mod.stc"
+
+  SetOutPath "$INSTDIR\examples\modules\mod_test"
+  File "${GPSIM_ROOT}\examples\modules\mod_test\Makefile"
+  File "${GPSIM_ROOT}\examples\modules\mod_test\mod_test.asm"
+  File "${GPSIM_ROOT}\examples\modules\mod_test\mod_test.stc"
+
+  SetOutPath "$INSTDIR\examples\modules\paraface_test"
+  File "${GPSIM_ROOT}\examples\modules\paraface_test\Makefile"
+  File "${GPSIM_ROOT}\examples\modules\paraface_test\partest.asm"
+  File "${GPSIM_ROOT}\examples\modules\paraface_test\partest.stc"
+
+  SetOutPath "$INSTDIR\examples\modules\usart_test"
+  File "${GPSIM_ROOT}\examples\modules\usart_test\Makefile"
+  File "${GPSIM_ROOT}\examples\modules\usart_test\usart.asm"
+  File "${GPSIM_ROOT}\examples\modules\usart_test\usart.stc"
+
+  SetOutPath "$INSTDIR\examples\projects"
+  File "${GPSIM_ROOT}\examples\projects\README"
+
+  SetOutPath "$INSTDIR\examples\projects\digital_stim"
+  File "${GPSIM_ROOT}\examples\projects\digital_stim\Makefile"
+  File "${GPSIM_ROOT}\examples\projects\digital_stim\ChangeLog"
+  File "${GPSIM_ROOT}\examples\projects\digital_stim\README"
+  File "${GPSIM_ROOT}\examples\projects\digital_stim\digital_stim.asm"
+  File "${GPSIM_ROOT}\examples\projects\digital_stim\digital_stim.stc"
+
+  SetOutPath "$INSTDIR\examples\projects\p16f628_test"
+  File "${GPSIM_ROOT}\examples\projects\p16f628_test\ChangeLog"
+  File "${GPSIM_ROOT}\examples\projects\p16f628_test\Makefile"
+  File "${GPSIM_ROOT}\examples\projects\p16f628_test\README"
+  File "${GPSIM_ROOT}\examples\projects\p16f628_test\f628.asm"
+  File "${GPSIM_ROOT}\examples\projects\p16f628_test\f628.stc"
+
+  SetOutPath "$INSTDIR\examples\projects\stack_test"
+  File "${GPSIM_ROOT}\examples\projects\stack_test\ChangeLog"
+  File "${GPSIM_ROOT}\examples\projects\stack_test\Makefile"
+  File "${GPSIM_ROOT}\examples\projects\stack_test\README"
+  File "${GPSIM_ROOT}\examples\projects\stack_test\stack_test.asm"
+  File "${GPSIM_ROOT}\examples\projects\stack_test\stack_test.stc"
+
+  SetOutPath "$INSTDIR\examples\scripts"
+  File "${GPSIM_ROOT}\examples\scripts\gensquares.asm"
+  File "${GPSIM_ROOT}\examples\scripts\testgensquares.py"
+  File "${GPSIM_ROOT}\examples\scripts\testgensquares_init.py"
+  File "${GPSIM_ROOT}\examples\scripts\testsocket.py"
+
+  SetOutPath "$INSTDIR\extras\lcd\examples"
+  File "${GPSIM_ROOT}\extras\lcd\examples\Makefile.am"
+  File "${GPSIM_ROOT}\extras\lcd\examples\README"
+  File "${GPSIM_ROOT}\extras\lcd\examples\lcd.asm"
+  File "${GPSIM_ROOT}\extras\lcd\examples\lcd.inc"
+  File "${GPSIM_ROOT}\extras\lcd\examples\lcd_mod.asm"
+  File "${GPSIM_ROOT}\extras\lcd\examples\lcd_mod.stc"
+  File "${GPSIM_ROOT}\extras\lcd\examples\lcdmemtest.c"
+  File "${GPSIM_ROOT}\extras\lcd\examples\lcdmemtest.hex"
+  File "${GPSIM_ROOT}\extras\lcd\examples\lcdmemtest.stc"
+  File "${GPSIM_ROOT}\extras\lcd\examples\p16c64.inc"
+  File "${GPSIM_ROOT}\extras\lcd\examples\p16c84.inc"
+  File "${GPSIM_ROOT}\extras\lcd\examples\screen.asm"
+  File "${GPSIM_ROOT}\extras\lcd\examples\screen.inc"
+
+  SetOutPath "$INSTDIR\extras\lcd"
+  File "${GPSIM_ROOT}\extras\lcd\AUTHORS"
+  File "${GPSIM_ROOT}\extras\lcd\COPYING"
+  File "${GPSIM_ROOT}\extras\lcd\ChangeLog"
+  File "${GPSIM_ROOT}\extras\lcd\INSTALL"
+  File "${GPSIM_ROOT}\extras\lcd\Makefile.am"
+  File "${GPSIM_ROOT}\extras\lcd\makefile.mingw"
+  File "${GPSIM_ROOT}\extras\lcd\NEWS"
+  File "${GPSIM_ROOT}\extras\lcd\README"
+  File "${GPSIM_ROOT}\extras\lcd\autogen.sh"
+  File "${GPSIM_ROOT}\extras\lcd\caps.pl"
+  File "${GPSIM_ROOT}\extras\lcd\configure.in"
+  File "${GPSIM_ROOT}\extras\lcd\lcd.cc"
+  File "${GPSIM_ROOT}\extras\lcd\lcd.gif"
+  File "${GPSIM_ROOT}\extras\lcd\lcd.h"
+  File "${GPSIM_ROOT}\extras\lcd\lcd.xpm"
+  File "${GPSIM_ROOT}\extras\lcd\lcdengine.cc"
+  File "${GPSIM_ROOT}\extras\lcd\lcdfont.h"
+  File "${GPSIM_ROOT}\extras\lcd\lcdfont.inc"
+  File "${GPSIM_ROOT}\extras\lcd\lcdgui.cc"
+  File "${GPSIM_ROOT}\extras\lcd\module_manager.cc"
+  File "${GPSIM_ROOT}\extras\lcd\t.gif"
+
+  SetOutPath "$INSTDIR\extras\rs232-gen\example"
+  File "${GPSIM_ROOT}\extras\rs232-gen\example\Makefile"
+  File "${GPSIM_ROOT}\extras\rs232-gen\example\README"
+  File "${GPSIM_ROOT}\extras\rs232-gen\example\example.asm"
+  File "${GPSIM_ROOT}\extras\rs232-gen\example\example.stc"
+
+  SetOutPath "$INSTDIR\extras\rs232-gen"
+  File "${GPSIM_ROOT}\extras\rs232-gen\Makefile"
+  File "${GPSIM_ROOT}\extras\rs232-gen\README"
+  File "${GPSIM_ROOT}\extras\rs232-gen\rs232-gen.c"
+
 SectionEnd
 
 Section -Icons
@@ -254,6 +485,29 @@ Section Uninstall
   Delete "$INSTDIR\ChangeLog.txt"
 
   Delete "$INSTDIR\modules\modules.dll"
+  Delete "$INSTDIR\modules\modules.def"
+
+  Delete "$INSTDIR\examples\12bit\*.*"
+  Delete "$INSTDIR\examples\14bit\*.*"
+  Delete "$INSTDIR\examples\16bit\*.*"
+
+  Delete "$INSTDIR\examples\modules\led_test\*.*"
+  Delete "$INSTDIR\examples\modules\logic_test\*.*"
+  Delete "$INSTDIR\examples\modules\mod_test\*.*"
+  Delete "$INSTDIR\examples\modules\paraface_test\*.*"
+  Delete "$INSTDIR\examples\modules\usart_test\*.*"
+
+  Delete "$INSTDIR\examples\projects\digital_stim\*.*"
+  Delete "$INSTDIR\examples\projects\p16f628_test\*.*"
+  Delete "$INSTDIR\examples\projects\stack_test\*.*"
+  Delete "$INSTDIR\examples\projects\*.*"
+  Delete "$INSTDIR\examples\scripts\*.*"
+
+  Delete "$INSTDIR\extras\lcd\examples\*.*"
+  Delete "$INSTDIR\extras\lcd\*.*"
+  Delete "$INSTDIR\extras\rs232-gen\example\*.*"
+  Delete "$INSTDIR\extras\rs232-gen\*.*"
+
   Delete "$INSTDIR\lib\pango\1.4.0\modules\pango-arabic-fc.dll"
   Delete "$INSTDIR\lib\pango\1.4.0\modules\pango-basic-fc.dll"
   Delete "$INSTDIR\lib\pango\1.4.0\modules\pango-basic-win32.dll"
@@ -298,12 +552,15 @@ Section Uninstall
   Delete "$INSTDIR\lib\gtk-2.0\2.4.0\immodules\im-ti-er.dll"
   Delete "$INSTDIR\lib\gtk-2.0\2.4.0\immodules\im-ti-et.dll"
   Delete "$INSTDIR\lib\gtk-2.0\2.4.0\immodules\im-am-et.dll"
+
   Delete "$INSTDIR\etc\pango\pango.modules"
   Delete "$INSTDIR\etc\pango\pango.aliases"
   Delete "$INSTDIR\etc\gtk-2.0\gtkrc"
   Delete "$INSTDIR\etc\gtk-2.0\gdk-pixbuf.loaders"
+
   Delete "$INSTDIR\doc\gpsimWin32.html"
   Delete "$INSTDIR\doc\gpsim_cvs.html"
+
   Delete "$INSTDIR\bin\asprintf.dll"
   Delete "$INSTDIR\bin\charset.dll"
   Delete "$INSTDIR\bin\gpsim.exe"
@@ -325,11 +582,14 @@ Section Uninstall
   Delete "$INSTDIR\bin\msvcp71.dll"
   Delete "$INSTDIR\bin\msvcr71.dll"
   Delete "$INSTDIR\bin\popt1.dll"
+  Delete "$INSTDIR\bin\readline.dll"
 
   Delete "$SMPROGRAMS\gpsim\Uninstall.lnk"
   Delete "$SMPROGRAMS\gpsim\Website.lnk"
   Delete "$DESKTOP\gpsim.lnk"
   Delete "$SMPROGRAMS\gpsim\gpsim.lnk"
+
+  Delete "$INSTDIR\include\gpsim\*.h"
 
   RMDir "$SMPROGRAMS\gpsim"
 
@@ -347,6 +607,31 @@ Section Uninstall
   RMDir "$INSTDIR\doc"
   RMDir "$INSTDIR\bin"
   RMDir "$INSTDIR\modules"
+
+  RMDir "$INSTDIR\examples\12bit"
+  RMDir "$INSTDIR\examples\14bit"
+  RMDir "$INSTDIR\examples\16bit"
+  RMDir "$INSTDIR\examples\modules\led_test"
+  RMDir "$INSTDIR\examples\modules\logic_test"
+  RMDir "$INSTDIR\examples\modules\mod_test"
+  RMDir "$INSTDIR\examples\modules\paraface_test"
+  RMDir "$INSTDIR\examples\modules\usart_test"
+  RMDir "$INSTDIR\examples\modules"
+  RMDir "$INSTDIR\examples\projects\digital_stim"
+  RMDir "$INSTDIR\examples\projects\p16f628_test"
+  RMDir "$INSTDIR\examples\projects\stack_test"
+  RMDir "$INSTDIR\examples\projects"
+  RMDir "$INSTDIR\examples\scripts"
+  RMDir "$INSTDIR\examples"
+  
+  RMDir "$INSTDIR\extras\lcd\examples"
+  RMDir "$INSTDIR\extras\lcd"
+  RMDir "$INSTDIR\extras\rs232-gen\example"
+  RMDir "$INSTDIR\extras\rs232-gen"
+  RMDir "$INSTDIR\extras"
+
+  RMDir "$INSTDIR\include\gpsim"
+  RMDir "$INSTDIR\include"
   RMDir "$INSTDIR"
 
   DeleteRegKey ${PRODUCT_UNINST_ROOT_KEY} "${PRODUCT_UNINST_KEY}"
@@ -368,7 +653,7 @@ Function CreateBatFile
   FileOpen $0 "$INSTDIR\${PRODUCT_NAME}.bat$\r$\n" w
   FileWrite $0 "@echo off$\r$\n"
   FileWrite $0 "set PATH=$INSTDIR\bin;%PATH$\r$\n"
-  FileWrite $0 "$INSTDIR\bin\${PRODUCT_NAME}$\r$\n"
+  FileWrite $0 "$\"$INSTDIR\bin\${PRODUCT_NAME}$\"$\r$\n"
   FileClose $0
 
   Pop $0
